ckadTest/v3/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
spec:
  containers:
  - image: busybox
    name: busybox
    command: ["/bin/sh", "-c", "sleep 3600"]
    volumeMounts:
     - name: config-volume
       mountPath: /etc/foo
  - image: busybox
    name: busybox2
    command: ["/bin/sh", "-c", "sleep 3600"]
    volumeMounts:
     - name: config-volume
       mountPath: /etc/foo
  volumes:
    - name: config-volume
      emptyDir: {}
