ckadTest/v3/busybox2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
spec:
  containers:
  - image: busybox
    name: busybox
    command: ["/bin/sh", "-c", "i=0; while true; do echo '$i: $(date)'; i=$((i+1)); sleep 1; done"]
