ckadTest/v3/busybox2.yml
apiVersion: v1
kind: Pod
metadata:
  name: busybox3
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - sleep 3600
    image: busybox
    name: busybox2
    volumeMounts:
      - name: volume-config
        mountPath: /etc/foo
  volumes:
   - name: volume-config
     persistentVolumeClaim:
        claimName: mypvc2
