ckadTest/v3/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
    livenessProbe:
     exec:
      command:
      - ls
     initialDelaySeconds: 5
     periodSeconds: 10
